--- a/package.json
+++ b/package.json
@@ -1,9 +1,39 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "string",
+  "version": "0.0.0",
+  "private": true,
   "dependencies": {
-    "readline": "^1.3.0"
+    "@supabase/supabase-js": "^2.38.1",
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-3-sanitize": "^0.1.4",
+    "vue-router": "4"
+  },
+  "resolutions": {
+    "@supabase/supabase-js": "2.24.0",
+    "@supabase/gotrue-js": "2.38.0"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.17.5",
+    "@vitejs/plugin-vue": "^4.3.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-vue": "^9.16.1",
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.0",
+    "sass": "^1.66.1",
+    "supabase": "^1.100.1",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2",
+    "vue-tsc": "^1.8.8"
   }
 }
