--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.1",
-    "pinia": "^2.1.6",
+    "@mdi/js": "7.2.96",
     "vue": "^3.3.4",
-    "vue-3-sanitize": "^0.1.4",
     "vue-router": "4"
   },
   "resolutions": {
